# TMAU

./: .gitignore
trunk/: CMakeLists 2.txt  CMakeLists 3.txt  lab1  main 2.cpp  main.cpp  model.cpp  models.hpp  readme 2.md  readme.md  test_model.cpp  test_temperature.cpp
trunk/AS0057508/task_01/doc/: readme.md
trunk/AS0057508/task_01/src/: main.cpp
trunk/AS0057508/task_02/: CMakeLists.txt
trunk/AS0057508/task_02/doc/: readme.md
trunk/AS0057508/task_02/src/: main.cpp  model.cpp  model.h
trunk/AS0057508/task_02/test/: unit_tests.cpp
trunk/AS0057705/task_01/doc/: readme.md
trunk/AS0057705/task_01/src/: CMakeLists.txt  main.cpp
trunk/AS0057705/task_02/: CMakeLists.txt
trunk/AS0057705/task_02/doc/: readme.md
trunk/AS0057705/task_02/src/: main.cpp  model.cpp  model.h
trunk/AS0057705/task_02/test/: test_model.cpp
trunk/AS0057706/task_01/doc/: readme.md
trunk/AS0057711/task_01/: CMakeLists.txt
trunk/AS0057711/task_01/doc/: readme.md
trunk/AS0057711/task_01/src/: main.cpp
trunk/AS0057711/task_02/: CMakeLists.txt
trunk/AS0057711/task_02/doc/: readme.md
trunk/AS0057711/task_02/src/: model.cpp  model.h
trunk/AS0057711/task_02/test/: test_model.cpp
trunk/AS0057716/task_01/doc/: readme.md
trunk/AS0057716/task_02/: CMakeLists.txt
trunk/AS0057716/task_02/src/: main.cpp  temperature_model.cpp  temperature_model.hpp
trunk/AS0057716/task_02/test/: test_temperature.cpp
trunk/AS0057718/task_01/doc/: readme.md
trunk/AS0057718/task_02/doc/: readme.md
trunk/AS0057725/task_01/doc/: readme.md
trunk/AS0057725/task_02/doc/: readme.md
trunk/AS0057726/task_01/doc/: readme.md
trunk/AS0057726/task_02/doc/: readme.md
trunk/AS0057727/task_01/doc/: readme.md
trunk/AS0057727/task_01/src/: CMakeLists.txt
trunk/AS0057727/task_02/doc/: readme.md
trunk/AS0057727/task_02/src/: main.cpp  simulation.cpp
trunk/AS0057732/task_01/doc/: readme.md
trunk/AS0057732/task_01/src/: CMakeLists.txt  main.cpp
trunk/AS0057732/task_02/: CMakeLists.txt
trunk/AS0057732/task_02/doc/: readme.md
trunk/AS0057732/task_02/src/: main.cpp  simulation.cpp  simulation.h
trunk/AS0057732/task_02/test/: test_core.cpp  test_simulation.cpp
trunk/Масалевич А.В/lab2/: model.h
